force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch__c</fullName>
    <formula>&quot;Gurgaon ISD&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch</label>
    <type>Text</type>
</CustomField>