force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch_City__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch_City__c</fullName>
    <formula>&quot;Gurugram&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch City</label>
    <type>Text</type>
</CustomField>