force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch_Country__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch_Country__c</fullName>
    <formula>&quot;India&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch Country</label>
    <type>Text</type>
</CustomField>