force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch_State__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch_State__c</fullName>
    <formula>&quot;Haryana&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch State</label>
    <type>Text</type>
</CustomField>