force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch_State_Code__c</fullName>
    <formula>&quot;06&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch State Code</label>
    <type>Text</type>
</CustomField>