force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch_Street__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch_Street__c</fullName>
    <formula>&quot;Building No 8, 2nd Floor, Tower A, DLF Cyber City, Phase II&quot;</formula>
    <label>Source Branch Street</label>
    <type>Text</type>
</CustomField>