force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch_Zip_Postal_Code__c</fullName>
    <formula>&quot;122002&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch Zip/Postal Code</label>
    <type>Text</type>
</CustomField>