force-app/main/default/objects/Manual_Invoice__c/fields/Supplier_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Supplier_GSTIN__c</fullName>
    <formula>Account_Name__r.Branch__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier GSTIN</label>
    <type>Text</type>
</CustomField>