force-app/main/default/objects/Manual_Invoice__c/fields/Supplier_GSTIN_ISD__c.field-meta.xml
<CustomField>
    <fullName>Supplier_GSTIN_ISD__c</fullName>
    <formula>&quot;06AAACI0218B2ZF&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch GSTIN</label>
    <type>Text</type>
</CustomField>