force-app/main/default/objects/Manual_Invoice__c/fields/Supplier_PAN__c.field-meta.xml
<CustomField>
    <fullName>Supplier_PAN__c</fullName>
    <formula>Account_Name__r.Branch__r.PAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier PAN</label>
    <type>Text</type>
</CustomField>