force-app/main/default/objects/Manual_Invoice__c/fields/Supplier_PAN_ISD__c.field-meta.xml
<CustomField>
    <fullName>Supplier_PAN_ISD__c</fullName>
    <formula>&quot;AAACI0218B&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Branch PAN</label>
    <type>Text</type>
</CustomField>