force-app/main/default/objects/Manual_Invoice__c/fields/Supplier_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_State_Code__c</fullName>
    <formula>Account_Name__r.Branch__r.State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier State Code</label>
    <type>Text</type>
</CustomField>