force-app/main/default/objects/Manual_Invoice__c/fields/Supplier_State_Code_ISD__c.field-meta.xml
<CustomField>
    <fullName>Supplier_State_Code_ISD__c</fullName>
    <formula>IF( Branch__r.Name == &apos;Gurgaon&apos;,  Branch__r.State_Code__c , &apos;Select Branch&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier State Code</label>
    <type>Text</type>
</CustomField>