force-app/main/default/objects/Manual_Invoice__c/fields/Supplier_State_ISD__c.field-meta.xml
<CustomField>
    <fullName>Supplier_State_ISD__c</fullName>
    <formula>IF( Branch__r.Name == &apos;Gurgaon&apos;, TEXT(Branch__r.State__c) ,&apos;Select Branch&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier State</label>
    <type>Text</type>
</CustomField>