force-app/main/default/objects/Manual_Invoice__c/fields/Tax_Subject_to_Reverse_Charge__c.field-meta.xml
<CustomField>
    <fullName>Tax_Subject_to_Reverse_Charge__c</fullName>
    <label>Tax Subject to Reverse Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>