force-app/main/default/objects/Manual_Invoice__c/fields/Taxable_Advance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Advance_Amount__c</fullName>
    <label>Taxable Advance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>