force-app/main/default/objects/Manual_Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>IGST_1__c  +  CGST_Amount__c  +  Amount__c + SGST_UTGST__c</formula>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>