force-app/main/default/objects/Manual_Invoice__c/fields/Total_Amount_Received_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Received_InterBranch__c</fullName>
    <formula>ROUND( Base_Amount_Received_Inter_Branch__c +  CGST_Amount_Received_InterBranch__c +  IGST_Amount_Received_InterBranch__c +  SGST_Amount_Received_InterBranch__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Received InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>