force-app/main/default/objects/Manual_Invoice__c/fields/Total_Balance_Amount_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Amount_InterBranch__c</fullName>
    <formula>ROUND( Total_Invoice_Amount_InterBranch__c -  Total_Amount_Received_InterBranch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance Amount InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>