force-app/main/default/objects/Manual_Invoice__c/fields/Total_Balance_Invoice_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_Invoice_Taxable_Amount__c</fullName>
    <formula>Total_Invoice_Taxable_Amount__c -  Total_Advance_Taxable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance Invoice Taxable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>