force-app/main/default/objects/Manual_Invoice__c/fields/Total_Base_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Amount_Received__c</fullName>
    <label>Total Base Amount Received</label>
    <summarizedField>Manual_Invoice_Line_Item__c.Total_Amount_Invoiced_WF__c</summarizedField>
    <summaryForeignKey>Manual_Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>