force-app/main/default/objects/Manual_Invoice__c/fields/Total_CGST_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_CGST_Balance_Amount__c</fullName>
    <formula>Total_CGST_Invoice_Amount__c -  Total_CGST_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CGST Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>