force-app/main/default/objects/Manual_Invoice__c/fields/Total_CGST_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_CGST_Invoice_Amount__c</fullName>
    <label>Total CGST Invoice Amount</label>
    <summarizedField>Manual_Invoice_Line_Item__c.Total_CGST_Amt__c</summarizedField>
    <summaryForeignKey>Manual_Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>