force-app/main/default/objects/Manual_Invoice__c/fields/Total_Invoice_Amount_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_InterBranch__c</fullName>
    <formula>ROUND( Amount__c +  CGST_Amount_on_Invoice_InterBranch__c +  SGST_Amount_on_Invoice_InterBranch__c +  IGST_Amount_on_Invoice_InterBranch__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>