force-app/main/default/objects/Manual_Invoice__c/fields/Total_Invoice_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Taxable_Amount__c</fullName>
    <label>Total Invoice Taxable Amount</label>
    <summarizedField>Manual_Invoice_Line_Item__c.Invoice_Taxable_Amount__c</summarizedField>
    <summaryForeignKey>Manual_Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>