force-app/main/default/objects/Manual_Invoice__c/fields/Total_SGST_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_SGST_Balance_Amount__c</fullName>
    <formula>Total_SGST_Invoice_Amount__c -  Total_SGST_Received_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SGST Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>