force-app/main/default/objects/Manual_Invoice__c/fields/Total_SGST_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_SGST_Received_Amount__c</fullName>
    <label>Total SGST Received Amount</label>
    <summarizedField>Manual_Invoice_Line_Item__c.Total_SGST_Amt_Received__c</summarizedField>
    <summaryForeignKey>Manual_Invoice_Line_Item__c.Invoice_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>