force-app/main/default/objects/Manual_Invoice__c/recordTypes/Inter_Branch_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Inter_Branch_Invoice</fullName>
    <active>true</active>
    <label>Inter-Branch Invoice</label>
</RecordType>