force-app/main/default/objects/Manual_Invoice__c/recordTypes/ISD.recordType-meta.xml
<RecordType>
    <fullName>ISD</fullName>
    <active>true</active>
    <label>ISD</label>
</RecordType>