force-app/main/default/objects/Manual_Invoice__c/recordTypes/OPE.recordType-meta.xml
<RecordType>
    <fullName>OPE</fullName>
    <active>true</active>
    <label>OPE</label>
</RecordType>