force-app/main/default/objects/Manual_Invoice__c/recordTypes/Other_Services.recordType-meta.xml
<RecordType>
    <fullName>Other_Services</fullName>
    <active>true</active>
    <label>Other Services</label>
</RecordType>