force-app/main/default/objects/Manual_Invoice__c/validationRules/IB_Description_of_Service_is_a_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>IB_Description_of_Service_is_a_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Inter-Branch Invoice&quot;,
ISBLANK(Description_of_Service__c)
)</errorConditionFormula>
    <errorDisplayField>Description_of_Service__c</errorDisplayField>
    <errorMessage>Description of Service is a Mandatory field. Kindly input the same.</errorMessage>
</ValidationRule>