force-app/main/default/objects/Manual_Invoice__c/validationRules/InterBranch_Amount_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>InterBranch_Amount_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Inter-Branch Invoice&quot;,
  ISBLANK(Amount__c)
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount is Mandatory. Kindly input the same.</errorMessage>
</ValidationRule>