force-app/main/default/objects/Manual_Invoice__c/validationRules/InterBranch_Currency_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>InterBranch_Currency_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Inter-Branch Invoice&quot;,
   ISBLANK(TEXT(CurrencyIsoCode)))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency is Mandatory. Kindly input the same.</errorMessage>
</ValidationRule>