force-app/main/default/objects/Manual_Invoice__c/validationRules/InterBranch_Destination_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>InterBranch_Destination_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Inter-Branch Invoice&quot;,
  ISBLANK(Destination_Branch__c)
)</errorConditionFormula>
    <errorDisplayField>Destination_Branch__c</errorDisplayField>
    <errorMessage>Destination Branch is Mandatory. Kindly input the same.</errorMessage>
</ValidationRule>