force-app/main/default/objects/Manual_Invoice__c/validationRules/InterBranch_InvoiceDate_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>InterBranch_InvoiceDate_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Inter-Branch Invoice&quot;,
  ISBLANK(Invoice_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Invoice_Date__c</errorDisplayField>
    <errorMessage>Invoice Date is Mandatory. Kindly input the same.</errorMessage>
</ValidationRule>