force-app/main/default/objects/Manual_Invoice__c/validationRules/InterBranch_Particulars_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>InterBranch_Particulars_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Inter-Branch Invoice&quot;,
ISBLANK(Particulars__c)
)</errorConditionFormula>
    <errorDisplayField>Particulars__c</errorDisplayField>
    <errorMessage>Particulars is a Mandatory field. Kindly input the same.</errorMessage>
</ValidationRule>