force-app/main/default/objects/Manual_Invoice__c/validationRules/InterBranch_SACHSN_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>InterBranch_SACHSN_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Inter-Branch Invoice&quot;,
ISBLANK( SAC_HSN__c )
)</errorConditionFormula>
    <errorDisplayField>SAC_HSN__c</errorDisplayField>
    <errorMessage>SAC/HSN is a Mandatory field. Kindly input the same.</errorMessage>
</ValidationRule>