force-app/main/default/objects/Manual_Invoice__c/validationRules/InterBranch_SourceB_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>InterBranch_SourceB_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name = &quot;Inter-Branch Invoice&quot;,
  ISBLANK(Source_Branch_1__c)
)</errorConditionFormula>
    <errorDisplayField>Source_Branch_1__c</errorDisplayField>
    <errorMessage>Source Branch is Mandatory. Kindly input the same.</errorMessage>
</ValidationRule>