force-app/main/default/objects/Manual_Invoice__c/validationRules/OPE_Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>OPE_Account_Name</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND( Account_Name__r.Name != NULL,Account_Name__r.RecordType.Name ==&apos;OT Related Accounts&apos;, RecordType.Name == &apos;OPE&apos;),true,false)</errorConditionFormula>
    <errorDisplayField>Account_Name__c</errorDisplayField>
    <errorMessage>You have Selected OT Related Account</errorMessage>
</ValidationRule>