force-app/main/default/objects/Manual_Invoice__c/validationRules/Other_Services.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Services</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(Account_Name__c != NULL,Account_Name__r.RecordType.Name !=&apos;OT Related Accounts&apos;, RecordType.Name ==&apos;Other Services&apos;),true,false)</errorConditionFormula>
    <errorDisplayField>Account_Name__c</errorDisplayField>
    <errorMessage>Please select OT Related Account</errorMessage>
</ValidationRule>